Fix width overflow bug in Picture component

--- a/src/components/Picture/Picture.scss
+++ b/src/components/Picture/Picture.scss
@@ -21,6 +21,7 @@
 
 .picture-source > * {
   margin: auto;
+  max-width: 100%;
   max-height: 100%;
 }
 
